[package]
name = "nepali-date-converter"
version = "0.1.0"
edition = "2021" 
authors = ["Dhrub Chaudhary <dhurbac66@gmail.com>"]
description = "A fast and reliable Bikram Sambat (BS) ↔ Gregorian (AD) date converter written in Rust. This library provides accurate Nepali date conversion."
license = "MIT"
repository = "https://github.com/dhurbachy/Nepali-Date-Converter"
readme = "README.md"
keywords = ["nepali", "calendar", "bikram-sambat", "date-converter", "bs"]
categories = ["date-and-time", "localization"]
include = ["src/**/*", "data/calendar_data.json", "Cargo.toml", "README.md"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[lib]
name = "nepali_date_converter"
path = "src/lib.rs"
